syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.permisosservicegrpc.grpc";

service permisosService{
    //public boolean getPermiso(String cedulaMedico, Long idPaciente)
    rpc getPermiso(PermisoRequest) returns (PermisoResponse) {}
}

message PermisoRequest {
  string cedula_medico = 1;
  int64 id_paciente = 2;
}

message PermisoResponse {
  bool permiso = 1;
}
